<resources>
    <string name="app_name">EasyCamp</string>
    <string name="username_hint">Nombre de usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="user_not_found">Usuario no encontrado</string>
    <string name="incorrect_password">Contraseña incorrecta</string>
    <string name="client_user">CLIENTE</string>
    <string name="worker_user">TRABAJADOR</string>
    <string name="nombreCampamento">Nombre campamento</string>
    <string name="descripcion">Descripción del campamento</string>
    <string name="title_activity_detallecampamento_detail_host">
        detallecampamentoDetailHostActivity
    </string>
    <string name="title_detallecampamento_list">detalle_campamentos</string>
    <string name="title_detallecampamento_detail">detalle_campamento Detail</string>
    <string name="title_activity_detalle_campamento">DetalleCampamentoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="text_lupa">Buscar campamento</string>
    <string name="text_cuenta">Usuario</string>
    <string name="text_tareas">Tareas</string>
    <string name="text_herramientas">Herramientas</string>
    <string name="navigation_campamentos">Campamentos</string>
    <string name="navigation_inscritos">Inscripciones</string>
    <string name="navigation_cuenta">Cuenta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_resumen">Resumen</string>
    <string name="navigation_descripcion">Descripción</string>
    <string name="registro_title">Registro</string>
    <string name="nombre_usuario_hint">Nombre de Usuario</string>
    <string name="contrasena_hint">Contraseña</string>
    <string name="nombre_hint">Nombre</string>
    <string name="apellidos_hint">Apellidos</string>
    <string name="edad_hint">Edad</string>
    <string name="seleccionar_tipo">Seleccionar Tipo</string>
    <string name="confirmar_button">Confirmar</string>
    <string name="text_registrarse">Registrarse</string>
    <string name="boton_lista_asistentes">Lista asistentes</string>
    <string name="boton_vehiculos">Vehiculos</string>
    <string name="boton_ubicaciones">Ubicaciones</string>
    <string name="boton_documentos">Documentos</string>
    <string name="tituloTarea">Titulo tarea</string>
    <string name="descripcionTarea">Descripcion de la tarea</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">

        
        <string name="titulo_recycler_trabajador">Lista de Trabajadores</string>
    <string name="descripcion_recycler_trabajador">Aquí encontrarás la lista de trabajadores disponibles.</string>
        <string name="titulo_inscritos_trabajador">Inscritos a mis Campamentos</string>
    <string name="descripcion_inscritos_trabajador">Lista de usuarios inscritos a tus campamentos.</string>
        <string name="titulo_herramientas_trabajador">Herramientas para Trabajadores</string>
    <string name="descripcion_herramientas_trabajador">Accede a herramientas y configuraciones para trabajadores.</string>
        <string name="titulo_cuenta_trabajador">Mi Cuenta como Trabajador</string>
    <string name="descripcion_cuenta_trabajador">Visualiza y edita la información de tu cuenta como trabajador.</string>
        <string name="menu_perfil_coordinador">Perfil</string>
    <string name="menu_crear_campamento">Campamento</string>
        <string name="titulo_perfil_coordinador">Mi Perfil como Coordinador</string>
    <string name="descripcion_perfil_coordinador">Visualiza y edita la información de tu perfil como coordinador.</string>
        <string name="titulo_crear_campamento">Crear Nuevo Campamento</string>
    <string name="descripcion_crear_campamento">Completa los detalles para crear un nuevo campamento.</string>
        <string name="hint_nombre">Nombre</string>
    <string name="hint_descripcion">Descripción</string>
    <string name="hint_fecha_inicio">Fecha de inicio</string>
    <string name="hint_fecha_final">Fecha final</string>
    <string name="hint_numero_max_participantes">Número máximo de participantes</string>
    <string name="hint_ubicacion">Ubicación</string>
    <string name="hint_edad_minima">Edad mínima</string>
    <string name="hint_edad_maxima">Edad máxima</string>
    <string name="hint_num_monitores">Número de monitores</string>
    <string name="hint_precio">Precio</string>
    <string name="hint_categoria">Categoría</string>
    <string name="hint_imagen">URL de la imagen</string>
    <string name="hint_latitud">Latitud</string>
    <string name="hint_longitud">Longitud</string>
    <string name="añadir_a_campamento">Apuntar</string>
    <string name="apuntar_hijo">Apuntar</string>
    <string name="horaTarea">Hora de la tarea</string>
    <string name="text_inscritos">Inscritos</string>
    <string name="boton_tareas">Tareas</string>
    <string name="menu_perfil">Perfil</string>
    <string name="title_activity_detalle_asistentes">DetalleAsistentesActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="boton_aceptados">Campamentos aceptados</string>
    <string name="navigation_trabajadores">Trabajadores</string>
    <string name="navigation_asistentes">Lista asistentes</string>
</resources>