<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tick"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/image"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/txtTituloTarea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tituloTarea"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/txtDescripcionTarea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcionTarea"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <ImageButton
        android:id="@+id/imgTick"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardViewTarea"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_weight="4"/>

</LinearLayout>